@@ -59,6 +59,7 @@ import static sleeper.core.properties.instance.CdkDefinedInstanceProperty.BULK_E
 import static sleeper.core.properties.instance.CdkDefinedInstanceProperty.BULK_EXPORT_TASK_CREATION_CLOUDWATCH_RULE;
 import static sleeper.core.properties.instance.CdkDefinedInstanceProperty.BULK_EXPORT_TASK_CREATION_LAMBDA_FUNCTION;
 import static sleeper.core.properties.instance.CdkDefinedInstanceProperty.VERSION;
+import static sleeper.core.properties.instance.CommonProperty.ACCOUNT;
 import static sleeper.core.properties.instance.CommonProperty.REGION;
 import static sleeper.core.properties.instance.CommonProperty.TASK_RUNNER_LAMBDA_MEMORY_IN_MB;
 import static sleeper.core.properties.instance.CommonProperty.TASK_RUNNER_LAMBDA_TIMEOUT_IN_SECONDS;
@@ -70,17 +71,19 @@ public class BulkExportTaskResources {
 
     private final InstanceProperties instanceProperties;
     private final Stack stack;
+    private final Queue jobsQueue;
 
     public BulkExportTaskResources(Stack stack, CoreStacks coreStacks, InstanceProperties instanceProperties,
             LambdaCode lambdaCode, IBucket jarsBucket, Queue jobsQueue, IBucket resultsBucket) {
         this.instanceProperties = instanceProperties;
         this.stack = stack;
-        lambdaToCreateTasks(coreStacks, lambdaCode, jobsQueue, instanceProperties);
+        this.jobsQueue = jobsQueue;
+        lambdaToCreateTasks(coreStacks, lambdaCode, instanceProperties);
         ecsClusterForBulkExportTasks(coreStacks, jarsBucket, lambdaCode, resultsBucket);
     }
 
     private void lambdaToCreateTasks(
-            CoreStacks coreStacks, LambdaCode lambdaCode, Queue jobsQueue, InstanceProperties instanceProperties) {
+            CoreStacks coreStacks, LambdaCode lambdaCode, InstanceProperties instanceProperties) {
         String instanceId = Utils.cleanInstanceId(instanceProperties);
         String functionName = String.join("-", "sleeper",
                 instanceId, "bulk-export-tasks-creator");
@@ -154,12 +157,20 @@ public class BulkExportTaskResources {
         jarsBucket.grantRead(taskDefinition.getTaskRole());
         resultsBucket.grantReadWrite(taskDefinition.getTaskRole());
 
+        String queueName = jobsQueue.getQueueName();
         taskDefinition.getTaskRole().addToPrincipalPolicy(PolicyStatement.Builder
                 .create()
-                .resources(Collections.singletonList("*"))
-                .actions(List.of("ecs:DescribeContainerInstances"))
+                .resources(List.of(
+                        String.format("arn:aws:ecs:%s:%s:cluster/%s", instanceProperties.get(REGION),
+                                instanceProperties.get(ACCOUNT), instanceProperties.get(BULK_EXPORT_CLUSTER)),
+                        String.format("arn:aws:sqs:%s:%s:%s", instanceProperties.get(REGION),
+                                instanceProperties.get(ACCOUNT), queueName)))
+                .actions(List.of(
+                        "ecs:DescribeContainerInstances",
+                        "sqs:ReceiveMessage",
+                        "sqs:DeleteMessage",
+                        "sqs:ChangeMessageVisibility"))
                 .build());
-
 
         CfnOutputProps bulkExportClusterProps = new CfnOutputProps.Builder()
                 .value(cluster.getClusterName())
